force-app/main/default/objects/LLC_BI__Entity_Compliance__c/fields/LLC_BI__Birthdate__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Birthdate__c</fullName>
    <description>The system automatically populates this date field to indicate the birthdate of the borrower or co-borrower for HMDA reportable loans. By default, this field is blank.</description>
    <inlineHelpText>This fields indicates the birthdate of the borrower or co-borrower for HMDA reportable loans.</inlineHelpText>
    <label>Birthdate</label>
    <type>Date</type>
</CustomField>