force-app/main/default/objects/LLC_BI__Entity_Compliance__c/fields/LLC_BI__DF1071_Business_Ownership_Status__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__DF1071_Business_Ownership_Status__c</fullName>
    <description>The system automatically populates this optional multi-select picklist field to indicate whether the business is minority-, women-, and/or LGBTQI+ owned. By default, it is empty.</description>
    <inlineHelpText>Select a value to indicate whether the business is minority-owned, women-owned, and/or LGBTQI+ owned.</inlineHelpText>
    <label>Business Ownership Status</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>1 - Minority-owned business</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>2 - Women-owned business</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>3 - LGBTQI+-owned business</label>
            </value>
            <value>
                <fullName>955</fullName>
                <label>955 - None of these apply</label>
            </value>
            <value>
                <fullName>966</fullName>
                <label>966 - The applicant responded that they did not wish to provide this information</label>
            </value>
            <value>
                <fullName>988</fullName>
                <label>988 - Not provided by applicant</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>