force-app/main/default/objects/LLC_BI__Entity_Compliance__c/fields/LLC_BI__DF1071_Gross_Annual_Revenue__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__DF1071_Gross_Annual_Revenue__c</fullName>
    <description>The system automatically populates this optional text field to store the dollar amount of the gross annual revenue for the preceding fiscal year. By default, it is empty.</description>
    <inlineHelpText>Use this field to specify the dollar amount of the gross annual revenue for the preceding fiscal year.</inlineHelpText>
    <label>Gross Annual Revenue</label>
    <length>20</length>
    <type>Text</type>
</CustomField>