force-app/main/default/objects/LLC_BI__Entity_Compliance__c/fields/LLC_BI__DF1071_Gross_Annual_Revenue_Flag__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__DF1071_Gross_Annual_Revenue_Flag__c</fullName>
    <description>The system automatically populates this optional picklist field to indicate whether the applicant provided the gross annual revenue for the preceding fiscal year. By default, it is empty.</description>
    <inlineHelpText>Use this field to identify whether the applicant provided the gross annual revenue for the preceding fiscal year.</inlineHelpText>
    <label>Gross Annual Revenue Flag</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>900</fullName>
                <label>900 - Provided</label>
            </value>
            <value>
                <fullName>988</fullName>
                <label>988 - Not provided by applicant and otherwise undetermined</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>