force-app/main/default/objects/LLC_BI__Entity_Compliance__c/fields/LLC_BI__DF1071_NAICS_Code__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__DF1071_NAICS_Code__c</fullName>
    <description>The system automatically populates this optional text field to store the NAICS code. By default, it is empty.</description>
    <inlineHelpText>Use this field to specify the NAICS code.</inlineHelpText>
    <label>NAICS Code</label>
    <length>3</length>
    <type>Text</type>
</CustomField>