force-app/main/default/objects/LLC_BI__Entity_Compliance__c/fields/LLC_BI__DF1071_NAICS_Code_Flag__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__DF1071_NAICS_Code_Flag__c</fullName>
    <description>The system automatically populates this optional picklist field to indicate if the applicant provided the NAICS code. By default, it is empty.</description>
    <inlineHelpText>Use this field to indicate if the applicant provided the NAICS code.</inlineHelpText>
    <label>NAICS Code Flag</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>900</fullName>
                <label>900 - Provided</label>
            </value>
            <value>
                <fullName>988</fullName>
                <label>988 - Not provided by applicant and otherwise undetermined</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>