force-app/main/default/objects/LLC_BI__Entity_Compliance__c/fields/LLC_BI__DF1071_Num_Principal_Owners__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__DF1071_Num_Principal_Owners__c</fullName>
    <description>The system automatically populates this optional picklist field to specify the total number of owners with at least 25% ownership interest. By default, it is empty.</description>
    <inlineHelpText>Select a value to specify the total number of owners with at least 25% ownership interest.</inlineHelpText>
    <label>Number of Principal Owners Value</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>