force-app/main/default/objects/LLC_BI__Entity_Compliance__c/fields/LLC_BI__DF1071_Num_Principal_Owners_Flag__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__DF1071_Num_Principal_Owners_Flag__c</fullName>
    <description>The system automatically populates this optional picklist field to indicate whether the applicant provided the total number of owners with at least 25% ownership interest. By default, it is empty.</description>
    <inlineHelpText>Select a value to indicate whether the applicant provided the total number of owners with at least 25% ownership interest.</inlineHelpText>
    <label>Number of Principal Owners Flag</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>900</fullName>
                <label>900 - Reported</label>
            </value>
            <value>
                <fullName>988</fullName>
                <label>988 - Not provided by applicant and otherwise undetermined</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>