force-app/main/default/objects/LLC_BI__Entity_Compliance__c/fields/LLC_BI__DF1071_Number_Of_Workers__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__DF1071_Number_Of_Workers__c</fullName>
    <description>The system automatically populates this optional picklist field to indicate the range of non-owner workers for the applicant or business. By default, it is empty.</description>
    <inlineHelpText>Select a value to indicate the range of non-owner workers for the applicant or business.</inlineHelpText>
    <label>Number of Workers</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>1 - Firms with no workers</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>2 - Firms with 1 to 4 workers</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>3 - Firms with 5 to 9 workers</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>4 - Firms with 10 to 19 workers</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>5 - Firms with 20 to 49 workers</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>6 - Firms with 50 to 99 workers</label>
            </value>
            <value>
                <fullName>7</fullName>
                <label>7 - Firms with 100 to 249 workers</label>
            </value>
            <value>
                <fullName>8</fullName>
                <label>8 - Firms with 250 to 499 workers</label>
            </value>
            <value>
                <fullName>9</fullName>
                <label>9 - Firms with 500 workers or more</label>
            </value>
            <value>
                <fullName>988</fullName>
                <label>988 - Not provided by applicant and otherwise undetermined</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>