force-app/main/default/objects/LLC_BI__Entity_Compliance__c/fields/LLC_BI__DF1071_PO1_Gender_Flag__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__DF1071_PO1_Gender_Flag__c</fullName>
    <description>The system automatically populates this optional picklist field to indicate whether the applicant provided the sex/gender of principal owner 1. By default, it is empty.</description>
    <inlineHelpText>Select a value to indicate whether the applicant provided the sex/gender of principal owner 1.</inlineHelpText>
    <label>Principal Owner 1 Gender Flag</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>1 - The applicant responded in the free-form text field</label>
            </value>
            <value>
                <fullName>966</fullName>
                <label>966 - The applicant responded that they did not wish to provide this information</label>
            </value>
            <value>
                <fullName>988</fullName>
                <label>988 - Not provided by applicant</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>