force-app/main/default/objects/LLC_BI__Entity_Compliance__c/fields/LLC_BI__DF1071_PO_1_Gender_FF__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__DF1071_PO_1_Gender_FF__c</fullName>
    <description>The system automatically populates this optional text field to specify the sex/gender identity of principal owner 1. By default, it is empty.</description>
    <inlineHelpText>Use this field to specify the sex/gender identity of principal owner 1.</inlineHelpText>
    <label>Principal Owner 1 Gender Free Form</label>
    <length>300</length>
    <type>LongTextArea</type>
</CustomField>