force-app/main/default/objects/LLC_BI__Entity_Compliance__c/fields/LLC_BI__DF1071_PO_2_Ethnicity__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__DF1071_PO_2_Ethnicity__c</fullName>
    <description>The system automatically populates this optional multi-select picklist field to indicate the ethnicity of principal owner 2. By default, it is empty.</description>
    <inlineHelpText>Select a value to indicate the ethnicity of principal owner 2.</inlineHelpText>
    <label>Principal Owner 2 Ethnicity</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>1 - Hispanic or Latino</label>
            </value>
            <value>
                <fullName>11</fullName>
                <label>11 - Mexican</label>
            </value>
            <value>
                <fullName>12</fullName>
                <label>12 - Puerto Rican</label>
            </value>
            <value>
                <fullName>13</fullName>
                <label>13 - Cuban</label>
            </value>
            <value>
                <fullName>14</fullName>
                <label>14 - Other Hispanic or Latino Ethnicity</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>2 - Not Hispanic or Latino</label>
            </value>
            <value>
                <fullName>966</fullName>
                <label>966 - The applicant responded that they did not wish to provide this information</label>
            </value>
            <value>
                <fullName>977</fullName>
                <label>977 - The applicant responded in the free-form text field</label>
            </value>
            <value>
                <fullName>988</fullName>
                <label>988 - Not provided by applicant</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>