force-app/main/default/objects/LLC_BI__Entity_Compliance__c/fields/LLC_BI__DF1071_PO_2_Ethnicity_FF__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__DF1071_PO_2_Ethnicity_FF__c</fullName>
    <description>The system automatically populates this optional text field to specify the ethnicity of principal owner 2. By default, it is empty.</description>
    <inlineHelpText>Use this field to specify the ethnicity of principal owner 2.</inlineHelpText>
    <label>Principal Owner 2 Ethnicity Free Form</label>
    <length>300</length>
    <type>LongTextArea</type>
</CustomField>