force-app/main/default/objects/LLC_BI__Entity_Compliance__c/fields/LLC_BI__DF1071_PO_2_Race__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__DF1071_PO_2_Race__c</fullName>
    <description>The system automatically populates this optional multi-select picklist field to indicate the race of principal owner 2. By default, it is empty.</description>
    <inlineHelpText>Select a value(s) to indicate the race of principal owner 2.</inlineHelpText>
    <label>Principal Owner 2 Race</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>1- American Indian or Alaska Native</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>2 - Asian</label>
            </value>
            <value>
                <fullName>21</fullName>
                <label>21 - Asian Indian</label>
            </value>
            <value>
                <fullName>22</fullName>
                <label>22 - Chinese</label>
            </value>
            <value>
                <fullName>23</fullName>
                <label>23 - Filipino</label>
            </value>
            <value>
                <fullName>24</fullName>
                <label>24 - Japanese</label>
            </value>
            <value>
                <fullName>25</fullName>
                <label>25 - Korean</label>
            </value>
            <value>
                <fullName>26</fullName>
                <label>26 - Vietnamese</label>
            </value>
            <value>
                <fullName>27</fullName>
                <label>27 - Other Asian Race</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>3 - Black or African American</label>
            </value>
            <value>
                <fullName>31</fullName>
                <label>31 - African American</label>
            </value>
            <value>
                <fullName>32</fullName>
                <label>32 - Ethiopian</label>
            </value>
            <value>
                <fullName>33</fullName>
                <label>33 - Haitian</label>
            </value>
            <value>
                <fullName>34</fullName>
                <label>34 - Jamaican</label>
            </value>
            <value>
                <fullName>35</fullName>
                <label>35 - Nigerian</label>
            </value>
            <value>
                <fullName>36</fullName>
                <label>36 - Somali</label>
            </value>
            <value>
                <fullName>37</fullName>
                <label>37 - Other Black or African American Race</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>4 - Native Hawaiian or Other Pacific Islander</label>
            </value>
            <value>
                <fullName>41</fullName>
                <label>41 - Native Hawaiian</label>
            </value>
            <value>
                <fullName>42</fullName>
                <label>42 - Guamanian or Chamorro</label>
            </value>
            <value>
                <fullName>43</fullName>
                <label>43 - Samoan</label>
            </value>
            <value>
                <fullName>44</fullName>
                <label>44 - Other Pacific Islander Race</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>5 - White</label>
            </value>
            <value>
                <fullName>966</fullName>
                <label>966 - The applicant responded that they did not wish to provide this information</label>
            </value>
            <value>
                <fullName>971</fullName>
                <label>971 - The applicant responded in the free-form text field for American Indian or Alaska Native Enrolled or Principal Tribe</label>
            </value>
            <value>
                <fullName>972</fullName>
                <label>972 - The applicant responded in the free-form text field for Other Asian race</label>
            </value>
            <value>
                <fullName>973</fullName>
                <label>973 - The applicant responded in the free-form text field for Other Black or African race</label>
            </value>
            <value>
                <fullName>974</fullName>
                <label>974 - The applicant responded in the free-form text field for Other Pacific Islander race</label>
            </value>
            <value>
                <fullName>988</fullName>
                <label>988 - Not provided by applicant</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>